# OpenLiveStacker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.json  copyright.txt  deploy_win.py  included_in_windows_distribution.txt
docs/: processing.dot  processing.md  protcol.md
include/: .camera.h.swp  allocator.h  alpaca_client.h  alpaca_focuser.h  alpaca_mount.h  astap_db_download_app.h  astronomy_calc.h  camera.h  camera_ctl.h  camera_iface.h  common_data.h  common_utils.h  config_app.h  ctl_app.h  cv_util.h  data_items.h  downloader.h  fits_guard.h  fitsmat.h  focuser.h  focuser_ctl.h  hot_removal.h  httplib_for_ols.h  indi_mount.h  libraw_wrapper.h  live_stretch.h  mount.h  mount_ctl.h  ols.h  os_util.h  plate_solver.h  plate_solver_ctl_app.h  plate_solver_result.h  polar_align.h  post_processor.h  processors.h  rotation.h  shift_bit.h  simd_ops.h  simd_utils.h  (+10 more)
scripts/: make_db.py  ols_gui
sim/: info.json  log.txt
src/: allocator.cpp  alpaca_camera.cpp  alpaca_client.cpp  alpaca_focuser.cpp  alpaca_mount.cpp  android_camera.cpp  android_main.cpp  asi_camera.cpp  camera.cpp  common_utils.cpp  cv_util.cpp  debug_save_processor.cpp  downloader.cpp  fitsmat.cpp  focuser.cpp  focuser_ctl.cpp  gphoto2_camera.cpp  indi_camera.cpp  indi_mount.cpp  indigo_camera.cpp  indigo_camera.h  mount.cpp  mount_ctl.cpp  ols.cpp  ols_cmd.cpp  plate_solver.cpp  post_processor.cpp  pre_processor.cpp  preprocessor.cpp  processors.cpp  server_sent_events.cpp  service.cpp  sim_camera.cpp  stacker_processor.cpp  svb_camera.cpp  tiffmat.cpp  toup_camera.cpp  toup_oem.h  util.cpp  uvc_camera.cpp  (+3 more)
test/: offline_sim.cpp  ols_cmd.cpp  plate_solver_test.cpp  stream_camera.cpp  test_bin.cpp  test_bin.py  test_bin2.py  test_camera.cpp  test_download.cpp  test_indigo_format_parsing.cpp
tools/: auto_stretch.py  build_star_pattern.m  test_gamma.cpp
www-data/: index.html
www-data/media/css/: style.css
www-data/media/js/: code.js
